PyMaker/datas/object2/RawHTML/i1901/Python_DOC_referPages.im-trying-to-put-numbers-into-a-list-and-square-and-print-them-all.txt
<div class="post-text" itemprop="text">
<p>So, I'm trying to put numbers into a list and square and print them all. </p>
<p>This is what I have :</p>
<pre><code>import math
ListNum = [2,4,6,8]
for item in ListNum:
    list(map(float, ListNum)
print(math.sqrt(ListNum))
</code></pre>
<p>but then I have this error:</p>
<blockquote>
<p>File "Main.py", line 5
      print(math.sqrt(ListNum))
          ^
  SyntaxError: invalid syntax</p>
</blockquote>
<p>Something with line 5 print. Any one that could help?</p>
</div>
<div class="post-text" itemprop="text">
<p>This works:</p>
<pre><code>import math
ListNum = [2,4,6,8]
for item in ListNum:
    print (math.sqrt(item))
    print (item*item)
</code></pre>
<p>The difference is that here you are printing every item in the list and not the list itself.</p>
<p>The first line - <code>print (math.sqrt(item))</code> prints square root and the second -  <code>print (item*item)</code> prints the square.</p>
</div>
<div class="post-text" itemprop="text">
<p>why not just create a list (using a list-comprehension) containing the result and then printing that (in whatever format)?</p>
<pre><code>from math import sqrt

ListNum = [2,4,6,8]

ret = [sqrt(x) for x in ListNum]
print(ret)
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>To answer the original question - SyntaxError is due to missing closing parenthesis on line 4 <code>list(map(float, ListNum)</code> should be <code>list(map(float, ListNum))</code>. Sometimes the error is on the previous line (line 4 in this case), not the one indicated in the traceback (in this case line 5).
The code will not deliver what you expect though. See the other answers for that.</p>
</div>
<div class="post-text" itemprop="text">
<pre><code>import math
ListNum = [2,4,6,8]
for item in ListNum:
    list(map(float, ListNum)  &lt;--- you miss a parenthese
print(math.sqrt(ListNum))
</code></pre>
<p>And <code>math.sqrt</code> is calculating for square root:</p>
<pre><code>&gt;&gt; help(math.sqrt)
sqrt(...)
    sqrt(x)

    Return the square root of x.
</code></pre>
<p>For squaring:</p>
<pre><code>import math
ListNum = [2,4,6,8]
result = list(map(math.pow, ListNum, [2]*len(ListNum)))
</code></pre>
<p>For square root:</p>
<pre><code>import math
ListNum = [2,4,6,8]
result = list(map(math.sqrt, ListNum))
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>In the document of python3, which you can find the link at the bottom, math.sqrt() is described as "Return the square root of x". 
Since ListNum is actually a list, math.sqrt() will have trouble recognizing any types other than numbers. </p>
<p>And the'SyntaxError' comes from a missing ')' at the end of line 4.</p>
<p>The following code could work.</p>
<pre><code>import math
ListNum = [2,4,6,8]
ListNum = list(map(math.sqrt,ListNum))
print (ListNum)
</code></pre>
<p><a href="https://docs.python.org/3/library/math.html" rel="nofollow noreferrer">https://docs.python.org/3/library/math.html</a></p>
</div>
<div class="post-text" itemprop="text">
<p>You can't take the square root of a list, and <code>ListNum</code> is a list.</p>
<p>If you want to take the <em>square root</em> (not square) of all numbers, you can map <code>math.sqrt</code> on to the list:</p>
<pre><code>import math
ListNum = [2,4,6,8]
roots = list(map(math.sqrt, ListNum))
print(roots)
</code></pre>
<p>Note that there is no loop; the iteration is abstracted into <code>map</code>.</p>
<p>If you want to <em>square</em> the numbers, you need a squaring function:</p>
<pre><code>def square(x) : return x * x
print(list(map(square, ListNum)))
</code></pre>
<p>or </p>
<pre><code>print(list(map(lambda x: x* x, ListNum)))
</code></pre>
</div>
<span class="comment-copy">side note: squaring is not <code>math.sqrt</code>...</span>
<span class="comment-copy">what is expected output mate ?</span>
